# 2026auto

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md
config/: competition_field.yaml  mission.yaml  navigation.yaml  perception.yaml  robot.yaml  voice_text.yaml
config/udev/: 99-usb-cam.rules
docs/: PROJECT_REQUIREMENTS_GROUND_CRUISE.md
docs/superpowers/plans/: 2026-05-24-ground-cruise-system.md  2026-06-04-fix-audit-issues.md  2026-06-06-fix-localization-stale.md  2026-06-06-three-critical-fixes-plan.md  2026-06-08-amcl-odom-robustness-plan.md
docs/superpowers/specs/: 2026-06-06-four-nav-fixes-design.md  2026-06-06-three-critical-fixes-design.md  2026-06-08-amcl-odom-robustness-design.md  2026-06-09-navigation-stability-fix-design.md  2026-06-09-odom-anti-slip-and-clearance-design.md
launch/: ground_cruise.launch
scripts/: competition.sh  debug_nav.sh  mapping.sh  navigation_test.sh  sim_full_test.sh  stop.sh
src/abot_vlm/: CMakeLists.txt  package.xml
src/common/: CMakeLists.txt  package.xml
src/common/scripts/: config_loader.py  mission_logger.py
src/jie_ware/: .gitignore  CMakeLists.txt
src/mission_manager/: CMakeLists.txt  package.xml
src/mission_manager/launch/: sim_full_mission.launch  sim_mission.launch  sim_navigation.launch
src/mission_manager/scripts/: mission_state_machine.py  mock_tts.py  mock_vlm.py  safety_monitor.py  sim_robot.py
src/robot_slam/: CMakeLists.txt  package.xml
tools/: generate_map.py  mark_map_gui.py  test_bluetooth_asr.py  test_doubao_asr_flash.py  test_doubao_voice.py  test_lidar_serial.py  test_voice_fixed.py
(+64 files in other folders)
