<?xml version="1.0"?>
<package format="2">
  <name>mission_manager</name>
  <version>1.0.0</version>
  <description>Ground cruise mission state machine and safety monitor</description>
  <maintainer email="lx_hm@example.com">lx_hm</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>common</exec_depend>
  <exec_depend>robot_slam</exec_depend>
</package>
